fix for alignment issue

--- a/source/en/asset/css/common.css
+++ b/source/en/asset/css/common.css
@@ -771,7 +771,7 @@ ul ol li {
 
 #header .btn.user-signin, #header .dropdown.btn.user-signin, #header .btn.marketplace, #header .dropdown.btn.marketplace {
     color: #323232;
-    /*padding: 0 1.6em !important;*/
+    padding: 0 0.2em !important;
 }
 
 #lgarrow.arrow-down {
@@ -789,6 +789,25 @@ ul ol li {
 #header nav li a.active {
     border-bottom: 3px solid #007ac2;
 	 padding-bottom: 9px;
+}
+
+#logged-in-navigation .user-signin {
+    margin-right: 20px;
+	 padding-top: 3px;
+}
+
+#logged-in-navigation.dropdown-wrapper {
+	 /*top: 18px;*/
+	 margin-top: 3px;
+}
+#logged-in-navigation.dropdown-wrapper .dropdown::after {
+	top: 15px;
+}
+#logged-out-navigation .btn.user-signin {
+	height: 31px;
+}
+#logged-out-navigation .btn.marketplace {
+	height: 29px;
 }
 
 
